Added the remaining content